--- a/class-components/src/App.css
+++ b/class-components/src/App.css
@@ -1,5 +1,7 @@
-#root {
-  max-width: 1280px;
+#app {
+  max-width: 1540px;
+  width: 100%;
+  height: 100dvw;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
