--- a/class-components/src/App.css
+++ b/class-components/src/App.css
@@ -1,10 +1,9 @@
 #app {
-  max-width: 1540px;
-  width: 100%;
-  height: 100dvw;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  position: relative;
+  z-index: 5;
 }
 
 .logo {
@@ -41,4 +40,13 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.upper-section {
+  display: flex;
+  padding-bottom: 15px;
+  justify-content: space-between;
+  button {
+    background-color: red;
+  }
 }
