feat: added pagination and more minors improves

--- a/class-components/src/index.css
+++ b/class-components/src/index.css
@@ -51,8 +51,9 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 2em;
+  line-height: 0;
+  margin-right: auto;
 }
 
 button {
