refactor: refactored and improved code elements

--- a/class-components/src/components/Results/Results.css
+++ b/class-components/src/components/Results/Results.css
@@ -10,7 +10,7 @@
   padding: 15px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-image: url(./src/assets/enterprize.png);
+  background-image: url(../../assets/enterprize.png);
   background-repeat: no-repeat;
   background-size: 60px;
   background-position: right 15px center;
