--- a/class-components/src/components/SearchComponent/SearchComponent.css
+++ b/class-components/src/components/SearchComponent/SearchComponent.css
@@ -1,9 +1,4 @@
 .search-component {
   display: flex;
-}
-
-section {
-  width: 50%;
-  padding: 20px;
-  border-left: 1px solid #ccc;
+  justify-content: center;
 }
