feat: added context to control theme style mode

--- a/class-components/src/components/App/App.module.css
+++ b/class-components/src/components/App/App.module.css
@@ -1,11 +1,32 @@
 #app {
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  position: relative;
-  z-index: 5;
+  transition: all 0.5s ease;
+
 }
 
+.light-app {
+  background-color: #ffffff;
+  color: #000000;
+  height: 100dvh;
+}
+
+.dark-app {
+  background-color: #000000;
+  color: #ffffff;
+}
+.header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 1em 2em;
+  .dark-button {
+    background-color: #ffffff;
+    color: #393939;
+  }
+  .light-button {
+    background-color: #393939;
+    color: #ffffff;
+  }
+}
 .logo {
   height: 6em;
   padding: 1.5em;
