--- a/class-components/src/components/Results/Results.module.css
+++ b/class-components/src/components/Results/Results.module.css
@@ -4,6 +4,13 @@
   flex-flow: column;
   gap: 10px;
   background-color: #ffffff6b;
+  min-width: 420px;
+  max-width: 501dvw;
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
 }
 
 .results__item {
@@ -14,7 +21,7 @@
   background-repeat: no-repeat;
   background-size: 40px;
   background-position: right 15px center;
-  background-color: rgb(33, 33, 33);
+  background-color: rgba(46, 28, 28, 0.27);
   max-width: 100%;
   display: flex;
   flex-flow: column;
@@ -25,11 +32,16 @@
     display: flex;
     gap: 10px;
   }
+  .results__item-date {
+    font-size: 14px;
+    color: #242424;
+  }
 
   .results__item-title {
     margin: 0;
     font-size: 15px;
-    color: red;
+    font-weight: 700;
+    /*color: red;*/
   }
 
   .results__item-season {
