--- a/class-components/src/components/Detail/Detail.module.css
+++ b/class-components/src/components/Detail/Detail.module.css
@@ -1,20 +1,52 @@
-.detail {
+#detail {
   width: 60%;
   margin: 20px 20px 0 20px;
   padding: 20px 20px 0 20px;
-  background-color: rgba(207, 203, 203, 0.84);
   border-radius: 8px;
+  position: relative;
+  background-color: rgba(207, 203, 203, 0.84);
 }
 
-.detail-component {
-  h2 {
-    color: red;
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  font-size: 0.7em;
+  cursor: pointer;
+
+}
+
+.detail-info {
+  h3 {
+    font-size: 16px;
+    margin: 0;
+    span {
+      border-bottom: 2px solid;
+    }
   }
   p {
-    color: #333;
+    font-weight: 500;
   }
-  p > strong {
-    color: blue;
+  p > span {
+    font-weight: 400;
     border-bottom: 2px dotted;
+  }
+  .detail-inf0-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    li {
+      flex-grow: 1;
+      margin: 5px 0 0 15px;
+      font-size: 13px;
+    }
+
+    &:hover {
+      cursor: pointer;
+      color: #646cff;
+    }
   }
 }
