--- a/class-components/src/components/Pagination/Pagination.module.css
+++ b/class-components/src/components/Pagination/Pagination.module.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;;
   gap: 5px;
+  width: fit-content;
   & .pagination-button {
     background-color: transparent;
     padding: 0;
