feat:  added downloading selected items.

--- a/class-components/src/components/Detail/Detail.module.css
+++ b/class-components/src/components/Detail/Detail.module.css
@@ -14,13 +14,12 @@
   border: none;
   font-size: 0.7em;
   cursor: pointer;
-
 }
 
 .detail-info {
   h3 {
     font-size: 16px;
-    margin: 0;
+    margin: 7px 0;
     span {
       border-bottom: 2px solid;
     }
@@ -38,10 +37,13 @@
     margin: 0;
     display: flex;
     flex-wrap: wrap;
+    gap: 10px;
     li {
-      flex-grow: 1;
-      margin: 5px 0 0 15px;
+      padding: 0 5px;
       font-size: 13px;
+      border: 1px solid;
+      border-radius: 3px;
+      filter: drop-shadow(2px 2px 2px #646cff);
     }
 
     &:hover {
