--- a/class-components/src/components/Flyout/Flyout.module.css
+++ b/class-components/src/components/Flyout/Flyout.module.css
@@ -2,15 +2,29 @@
   display: flex;
   align-items: center;
   position: absolute;
-  bottom: 17px;
-  left: 205px;;
+  width: 100%;
+  height: 100%;
+  left: 27%;
+  margin-right: 25%;
   gap: 10px;
+  z-index: 500;
+
+  .flyout-wrapper{
+    background-color: rgba(134, 134, 134, 0.7);
+    padding: 20px 50px;
+    border-radius: 20px;
+    display: flex;
+    flex-flow: column;
+    gap: 10px;
+    p {
+      font-weight: 700;
+    }
+  }
   .counter {
     font-size: 14px;
     span {
       font-weight: 700;
       font-size: 16px;
-      filter: drop-shadow(1px 1px 1px #b42323);
     }
   }
   button {
