--- a/class-components/src/components/Flyout/Flyout.module.css
+++ b/class-components/src/components/Flyout/Flyout.module.css
@@ -1,8 +1,7 @@
 .flyout {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   position: absolute;
-  width: 100%;
   height: 100%;
   left: 27%;
   margin-right: 25%;
@@ -10,6 +9,7 @@
   z-index: 500;
 
   .flyout-wrapper{
+    margin-bottom: 50px;
     background-color: rgba(134, 134, 134, 0.7);
     padding: 20px 50px;
     border-radius: 20px;
